--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -131,7 +131,6 @@
 
 .skills__carousel {
   width: 100% !important;
-  height: 100% !important;
 }
 
 .skills__item {
@@ -139,20 +138,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 60%;
   padding: 0.75rem;
-  margin: 0 5px;
-  box-sizing: border-box;
+  margin: 0 auto;
   border: 1px solid var(--border-color);
   border-radius: 8px;
   box-shadow: 3px 3px 5px var(--first-color);
   background-color: transparent;
+  text-align: center;
 }
 
 .skills__item img {
   width: 60px;
   height: 60px;
-  border-radius: 8px;
 }
 
 .skills__item p {
